- New feature where you can specify rubble blocks for a building. These will be used instead of the filler block but only for when buildings are damaged and spill over in adjacent chunks
- New 'variant' asset type where you can define sets of blocks that can then be used in palettes. This makes defining different palettes easier

@TODO: Fix glass panes not updating state correctly

1.18-5.2.6:
- New system to control city rarity based on perlin maps. If the cityChance setting is -1 then cityPerlinScale and cityPerlinOffset will be used for a more natural city style
- New 'cityStyleThreshold' and 'cityStyleAlternative' that can be used to select another city style for low city thresholds
- New 'largecities' profile using the new setting. It presents very large cities that are relatively rare. It also uses an alternative city style at the borders of the city
- Removed the non functional chisel worldstyle and palettes
- Having a missing asset file is no longer a crashing error but it will put an error in the log and ignore the asset
- Citystyles can now override the building chance
- Fixed a bug with feature placement for datapack biomes

1.18-5.2.5:
- Fixed a problem where spawners might not be correctly set if the Lost City world is exited and loaded again

1.18-5.2.4:
- All mob spawners were spawning pigs. This is fixed now
- The Lost Cities events are back (useful for mods who want to do something special to LC worldgen)
- Cellars at level -1 didn't correctly connect to adjacent corridors in Z direction
- Fixed a problem with heightmaps being stored with bytes. But worldheight no longer fits in a byte. This could cause worldgen issues
- Made borders below buildings and streets only go as deep as needed. This means that you will no longer have ugly borders going down into caves from buildings on top of it
- The test if a chunk is an ocean chunk was totally wrong. This caused some generation to be ugly. Cleaned up biome test code
- Small optimizations