@@ -1,24 +1,0 @@
-[
-  {
-    "type": "worldstyle",
-    "name": "standard",
-    "outsidestyle": "outside",
-    "citystyles": [
-      {
-        "factor": 0.5,
-        "citystyle": "citystyle_standard"
-      },
-      {
-        "factor": 9.0,
-        "biomes": [
-          "desert",
-          "desert_hills",
-          "mesa",
-          "mesa_rock",
-          "mesa_clear_rock"
-        ],
-        "citystyle": "citystyle_desert"
-      }
-    ]
-  }
-]
